--- a/client/package.json
+++ b/client/package.json
@@ -9,7 +9,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-query": "^4.29.3",
+    "axios": "^1.3.5",
     "infinite-react-carousel": "^1.2.11",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.0",
@@ -24,4 +27,3 @@
     "vite": "^4.0.0"
   }
 }
-
