--- a/netlify.toml
+++ b/netlify.toml
@@ -4,5 +4,5 @@ base = "client"
 [build.environment]
 NODE_VERSION = "v16.17.1" 
 
-[build.command]
-  publish = "yarn build" 
+[build]
+  command = "yarn build" 
